Fix: event ticket price alignment

--- a/src/components/ConfirmOrder/ConfirmOrder.module.scss
+++ b/src/components/ConfirmOrder/ConfirmOrder.module.scss
@@ -212,7 +212,6 @@
 .purchase-details-left, .purchase-details-right {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     justify-content: right;
     margin-right: 1rem;
     background-color: $theme-background-color;
@@ -226,6 +225,10 @@
             text-decoration: none;
         }
     }
+}
+
+.purchase-details-right {
+    align-items: flex-end;
 }
 
 .purchase-payment {
